assets/css/master.css
@font-face {
  font-family: 'Helvetica Neue';
  src: url('../fonts/HelveticaNeue.ttf') format('tff');
}

@font-face {
  font-family: 'Helvetica Neue Medium';
  src: url('../fonts/HelveticaNeue-Medium.ttf') format('tff');
}


@font-face {
  font-family: 'Athelas Regular';
  font-style: normal;
  font-weight: normal;
  src: url('../fonts/Athelas-Regular.woff') format('woff');
}

@font-face {
  font-family: 'Athelas Italic';
  font-style: normal;
  font-weight: normal;
  src: url('../fonts/Athelas-Italic.woff') format('woff');
}

html, body {
  height: 100%;
  background-color: #F4F4F8;
  user-select: none;
  cursor: default;
  margin: 0;
  padding: 0;
  font-family: "Athelas Regular";
}

/* HEADER */

header{
  width: 100%;
  /*height: 31%;*/
  /*height: 13rem;*/
  min-height: 18vw;
  max-height: 22vw;
  height: 13rem;
  padding: 6% 7% 0;
  box-sizing: border-box;
  position: relative;
}



.nav_wrap { height: auto;
            width: 83.7%;
            position: fixed;
            top: 7%;
            left: 8%;
            overflow-y: auto;
            z-index: 500;
            }



.nav_link { height: auto;
            width: 13%;
            position: relative;
            display: inline;
            float: left;
            font-size: 15px;
            color: #05303E;
            padding-bottom: 8px;
            cursor: pointer;
            }



.nav_link:before { content: "";
                   height: 0px;
                   width: 45%;
                   position: absolute;
                   bottom: 0px;
                   border-bottom: solid 1px #05303E;
                   -webkit-transition: .25s ease;
                   transition: .25s ease;
                   -moz-transition: .25s ease;
                   }



.nav_link:nth-of-type(1):before,
.nav_link:nth-of-type(2):before { left: 0px; }

.nav_link:nth-of-type(3):before,
.nav_link:nth-of-type(4):before { right: 0px; }

.nav_link:nth-of-type(4):before { width: 60%; }


.nav_link:nth-of-type(1),
.nav_link:nth-of-type(2) { float: left;
                           text-align: left;
                            }


.nav_link:nth-of-type(3),
.nav_link:nth-of-type(4) { float: right;
                           text-align: right;
                          }


.nav_link:hover { color: #081FC1;
                  font-family: "Athelas Italic";
                 }

.nav_link:hover:before { width: 0%; }



.on_link { color: #081FC1;
           font-family: "Athelas Italic";
          }


.nav_text { height: auto;
            width: 40%;
            position: fixed;
            top: 7%;
            left: 30%;
            font-size: 18px;
            color: #05303E;
            text-align: center;
            z-index: 400;
            letter-spacing: 2px;
            }



.fixed_link { height: 100%;
              width: 100%;
              position: absolute;
              top: 0px;
              left: 0px;
              }


.logo{
  position:fixed;
  z-index: 4;
  width: 86%;
  }


.logo > span {
    display: block;
    text-align: center;
    font-size: 18px;
    margin-bottom: 11px;
    color: #05303E;
    letter-spacing: 2.5px;
}


.logo > img {
  display: block;
  margin: 0 auto;
  width: 50%;
}




.close_pop,
.menu_button { height: 20px;
               width: 20px;
               position: fixed;
               top: 4.5%;
               right: 6%;
               background-image: url('../graphics/menu-icon.png');
               background-size: cover;
               background-position: center center;
               background-repeat: no-repeat;
               cursor: pointer;
               display: none;
               z-index: 300;
              }




/* media query */
@media screen and (max-width: 900px) {

.text-box { opacity: 0; }

.nav_wrap { display: none; }

.nav_text { top: 5%; }

.logo { margin-top: 18px; }


.menu_button { display: block; }


} /* end of media query */



/* media query */
@media screen and (max-width: 500px) {


.nav_text { top: 3%;
            font-size: 16px;
           }


} /* end of media query */




/* media query */
@media screen and (min-width: 401px) and (max-width: 500px) {


.logo { width: 350px;
        left: 50%;
        margin-left: -175px;
        }


} /* end of media query */








/* SECTION */
section {
  height: auto;
  width: auto;
  position: relative;
  display: flex;
  display: -webkit-flex;
  margin: 3% 8%;
  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -moz-flex-flow: row wrap;
  justify-content: space-between;
  -webkit-justify-content: space-between;
  -moz-justify-content: space-between;
 }



/* media query */
@media screen and (max-width: 600px) {


section { margin: 3% 4%; }


} /* end of media query */




#about_section { -webkit-animation: show .25s ease;
                 -moz-animation: show .25s ease;
                 animation: show .25s ease;
                }



@-webkit-keyframes show {

from { left: -100%; }
to   { left: 0px; }


} /* end of keyframes */


@-moz-keyframes show {

from { left: -100%; }
to   { left: 0px; }


} /* end of keyframes */


@keyframes show {

from { left: -100%; }
to   { left: 0px; }


} /* end of keyframes */




.preview { height: auto;
           width: 47%;
           position: relative;
           margin-top: 5%;
           cursor: pointer;
           backface-visibility: hidden;
           -webkit-backface-visibility: hidden;
           -webkit-animation: flip_in .25s ease;
           -webkit-animation-fill-mode: backwards;
          }


.preview:after { content: "";
                 height: 100%;
                 width: 100%;
                 position: absolute;
                 top: 0px;
                 left: 0px;
                 background: black;
                 opacity: 0;
                 z-index: 100;
                 }

.preview:nth-of-type(-n+2) { margin-top: 0px; }



#preview-1 { -webkit-animation-timing: .25s; }

#preview-2 { -webkit-animation-delay: .25s; }


#preview-3 { -webkit-animation-delay: .50s; }
/* ... */

